#############################################################################
BETA PUBLIC RELEASE VERSION 0.4.0       12-14-05 
#############################################################################
  - NEW FEATURES
    * New version of the 'acc' program available.
    * Added additional verbosity to APBS output.
    * Added tools/python/vgrid to the autoconf script. The directory compiles
      with the rest of the Python utilities and is used for manipulating
      dx files.
    * Modified the tools/python/noinput.py example to show the ability to get
      and print energy and force vectors directly into Python arrays.
    * Added dx2uhbd tool to tools/mesh for converting from dx format to UHBD
      format (Thanks to Robert Konecny)
    * Added ability of tools/manip/inputgen.py to split a single mg-para APBS
      input file into multiple asynchronous input files.
    * Modified inputgen.py to be more flexible for developers wishing to
      directly interface with APBS.
    * Added Vclist cell list class to replace internal hash table in Vacc
    * Modified Vacc class to use Vclist, including changes to the Vacc
      interface (and required changes throughout the code)
    * Consolidated Vpmg_ctor and Vpmg_ctorFocus into Vpmg_ctor
    * Consolidated vpmg.c, vpmg-force.c, vpmg-energy.c, vpmg-setup.c
    * Added autoconf support for compilation on the MinGW32 Windows Environment
    * Added autoconf support (with Python) for Mac OS 10.4 (Tiger)
    * Added the function Vpmg_solveLaplace to solve homogeneous versions of
      Poisson's equation using Laplacian eigenfunctions.
    * Modified the dielectric smoothing algorithm (srfm smol) to a 9 point
      method based on Bruccoleri, et al.  J Comput Chem 18 268-276 (1997).
      NOTE:  This is a faster and more flexible smoothing method.  However,
      when combined with the the molecular surface bugfixes listed below,
      this change has the potential to make the srfm smol method give very